--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -9,5 +9,5 @@
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "maxModuleSpeed": 4.5,
-  "choreoProjectPath": "31.5 square robot with wood and falcons, test 1.chor"
+  "choreoProjectPath": "v2.chor"
 }
