--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,17 +1,18 @@
 {
-  "robotWidth": 0.864,
-  "robotLength": 0.99,
+  "robotWidth": 0.8382,
+  "robotLength": 0.9779,
   "holonomicMode": true,
   "pathFolders": [
-    "Test",
-    "New Folder"
+    "BLuePaths",
+    "RedPaths",
+    "Test"
   ],
   "autoFolders": [
     "Test"
   ],
-  "defaultMaxVel": 3.0,
-  "defaultMaxAccel": 3.0,
-  "defaultMaxAngVel": 540.0,
-  "defaultMaxAngAccel": 720.0,
+  "defaultMaxVel": 3.5,
+  "defaultMaxAccel": 7.5,
+  "defaultMaxAngVel": 530.0,
+  "defaultMaxAngAccel": 1200.0,
   "maxModuleSpeed": 4.5
 }
